--- a/website/index.html
+++ b/website/index.html
@@ -158,7 +158,7 @@
                                 </ul>
                             </small>
                             <div class="row">
-                                <div class="col-md-4">07/2019 - today</div>
+                                <div class="col-md-4">07/2019 - 08/2023</div>
                                 <div class="col-md-8"></div>
                             </div>
                             <p>
