--- a/website/index.html
+++ b/website/index.html
@@ -61,14 +61,9 @@
                 </div>
                 <div class="col-xs-12 col-md-8">
                     <h2>Biography</h2>
-                    <p>I’m a passionate software developer, leveraging new and proven technologies and practices to
-                        deliver
-                        high quality solutions. My technical expertise includes cross-platform proficiency, various
-                        programming languages, and advanced knowledge of software development methodologies, developer
-                        tools
-                        and industry best practices. My hands-on experience with a wide range of technologies, enables
-                        me to
-                        advise and implement the best solution for our client’s problems.</p>
+                    <p>I’m a passionate software developer, leveraging new and proven technologies and practices to deliver high quality solutions. 
+                        My expertise includes various programming languages, overseeing and coordinating technical aspects of a software team,
+                        advanced knowledge of software development methodologies, developer tools and industry best practices. </p>
                     <div class="row">
                         <div class="col-sm">
                             <h3>Education</h3>
@@ -129,7 +124,7 @@
                                 <br />
                                 <a href="https://www.yelp.com/">Yelp</a>
                             </p>
-                            <p class="summary">Tech Lead Yelp Partner API. Full Stack Software Engineer working on the
+                            <p class="summary">Tech Lead Yelp Partner API, Full Stack Software Engineer working on the
                                 multi-location partners team.</p>
                             <small>
                                 <ul>
