Add career break

--- a/website/index.html
+++ b/website/index.html
@@ -126,6 +126,7 @@
                             </p>
                             <p class="summary">Tech Lead Yelp Partner API, Full Stack Software Engineer working on the
                                 multi-location partners team.</p>
+                            <p class="summary">Left Yelp 09/2023 - 01/2025 for long distance hiking: hiked over 4,000km on the Pacific Crest Trail (PCT) in the US, the Bibbulmun Track in Australia, the Pekoe Trail in Sri Lanka and extensively in Patagonia. Also traveled around Asia and Central- and South-America.</p>
                             <small>
                                 <ul>
                                     <li>Worked on various python services, the main monolith and the Yelp frontend.
@@ -153,6 +154,10 @@
                                 </ul>
                             </small>
                             <div class="row">
+                                <div class="col-md-4">02/2025 - present</div>
+                                <div class="col-md-8"></div>
+                                <div class="col-md-4">09/2023 - 01/2025</div>
+                                <div class="col-md-8">Career Break</div>
                                 <div class="col-md-4">07/2019 - 08/2023</div>
                                 <div class="col-md-8"></div>
                             </div>
